cmake_minimum_required(VERSION 3.9)
project(contiki)

set(CMAKE_CXX_STANDARD 11)

include_directories(core)
include_directories(cpu/msp430)
include_directories(platform/sky)
include_directories(dev/cc2420)
include_directories(.)


add_executable(contiki
        apps/about/about-dsc.c
        apps/about/about-dsc.h
        apps/about/about.c
        apps/about/Makefile.about
        apps/antelope/antelope.c
        apps/antelope/antelope.h
        apps/antelope/aql-adt.c
        apps/antelope/aql-exec.c
        apps/antelope/aql-lexer.c
        apps/antelope/aql-parser.c
        apps/antelope/aql.h
        apps/antelope/attribute.h
        apps/antelope/db-options.h
        apps/antelope/db-types.h
        apps/antelope/debug.h
        apps/antelope/index-inline.c
        apps/antelope/index-maxheap.c
        apps/antelope/index-memhash.c
        apps/antelope/index.c
        apps/antelope/index.h
        apps/antelope/lvm.c
        apps/antelope/lvm.h
        apps/antelope/Makefile.antelope
        apps/antelope/relation.c
        apps/antelope/relation.h
        apps/antelope/result.c
        apps/antelope/result.h
        apps/antelope/storage-cfs.c
        apps/antelope/storage.h
        apps/at-master/at-master.c
        apps/at-master/at-master.h
        apps/at-master/Makefile.at-master
        apps/calc/calc-dsc.c
        apps/calc/calc-dsc.h
        apps/calc/calc.c
        apps/calc/Makefile.calc
        apps/cmdd/cmdd.c
        apps/cmdd/cmdd.h
        apps/cmdd/Makefile.cmdd
        apps/codeprop/codeprop-tmp.c
        apps/codeprop/codeprop-tmp.h
        apps/codeprop/codeprop.c
        apps/codeprop/codeprop.h
        apps/codeprop/Makefile.codeprop-tmp
        apps/codeprop/tcp_loader.c
        apps/codeprop/tcp_loader2.c
        apps/collect-view/collect-view-sky.c
        apps/collect-view/collect-view-sky.h
        apps/collect-view/collect-view-template.c
        apps/collect-view/collect-view-z1.c
        apps/collect-view/collect-view-z1.h
        apps/collect-view/collect-view.c
        apps/collect-view/collect-view.h
        apps/collect-view/Makefile.collect-view
        apps/dhcp/dhcp-dsc.c
        apps/dhcp/dhcp-dsc.h
        apps/dhcp/dhcp.c
        apps/dhcp/dhcp.h
        apps/dhcp/Makefile.dhcp
        apps/directory/directory-dsc.c
        apps/directory/directory-dsc.h
        apps/directory/directory.c
        apps/directory/Makefile.directory
        apps/email/email-dsc.c
        apps/email/email-dsc.h
        apps/email/email.c
        apps/email/email.h
        apps/email/Makefile.email
        apps/email/smtp-socket.c
        apps/email/smtp-strings
        apps/email/smtp-strings.c
        apps/email/smtp-strings.h
        apps/email/smtp.h
        apps/er-coap/er-coap-block1.c
        apps/er-coap/er-coap-block1.h
        apps/er-coap/er-coap-conf.h
        apps/er-coap/er-coap-constants.h
        apps/er-coap/er-coap-engine.c
        apps/er-coap/er-coap-engine.h
        apps/er-coap/er-coap-observe-client.c
        apps/er-coap/er-coap-observe-client.h
        apps/er-coap/er-coap-observe.c
        apps/er-coap/er-coap-observe.h
        apps/er-coap/er-coap-res-well-known-core.c
        apps/er-coap/er-coap-separate.c
        apps/er-coap/er-coap-separate.h
        apps/er-coap/er-coap-transactions.c
        apps/er-coap/er-coap-transactions.h
        apps/er-coap/er-coap.c
        apps/er-coap/er-coap.h
        apps/er-coap/Makefile.er-coap
        apps/ftp/ftp-dsc.c
        apps/ftp/ftp-dsc.h
        apps/ftp/ftp.c
        apps/ftp/ftp.h
        apps/ftp/ftpc.c
        apps/ftp/ftpc.h
        apps/ftp/Makefile.ftp
        apps/http-post-auth/http-post-auth.c
        apps/http-post-auth/http-post-auth.h
        apps/http-post-auth/Makefile.http-post-auth
        apps/httpd-ws/httpd-ws.c
        apps/httpd-ws/httpd-ws.h
        apps/httpd-ws/Makefile.httpd-ws
        apps/ipso-objects/ipso-button.c
        apps/ipso-objects/ipso-leds-control.c
        apps/ipso-objects/ipso-light-control.c
        apps/ipso-objects/ipso-objects.c
        apps/ipso-objects/ipso-objects.h
        apps/ipso-objects/ipso-temperature.c
        apps/ipso-objects/Makefile.ipso-objects
        apps/irc/irc-dsc.c
        apps/irc/irc-dsc.h
        apps/irc/irc.c
        apps/irc/irc.h
        apps/irc/ircc-strings
        apps/irc/ircc-strings.c
        apps/irc/ircc-strings.h
        apps/irc/ircc.c
        apps/irc/ircc.h
        apps/irc/Makefile.irc
        apps/json/json.h
        apps/json/jsonparse.c
        apps/json/jsonparse.h
        apps/json/jsontree.c
        apps/json/jsontree.h
        apps/json/Makefile.json
        apps/mqtt/Makefile.mqtt
        apps/mqtt/mqtt.c
        apps/mqtt/mqtt.h
        apps/netconf/Makefile.netconf
        apps/netconf/netconf-dsc.c
        apps/netconf/netconf-dsc.h
        apps/netconf/netconf.c
        apps/oma-lwm2m/lwm2m-device.c
        apps/oma-lwm2m/lwm2m-device.h
        apps/oma-lwm2m/lwm2m-engine.c
        apps/oma-lwm2m/lwm2m-engine.h
        apps/oma-lwm2m/lwm2m-json.c
        apps/oma-lwm2m/lwm2m-json.h
        apps/oma-lwm2m/lwm2m-object.c
        apps/oma-lwm2m/lwm2m-object.h
        apps/oma-lwm2m/lwm2m-plain-text.c
        apps/oma-lwm2m/lwm2m-plain-text.h
        apps/oma-lwm2m/lwm2m-security.c
        apps/oma-lwm2m/lwm2m-server.c
        apps/oma-lwm2m/Makefile.oma-lwm2m
        apps/oma-lwm2m/oma-tlv-reader.c
        apps/oma-lwm2m/oma-tlv-reader.h
        apps/oma-lwm2m/oma-tlv-writer.c
        apps/oma-lwm2m/oma-tlv-writer.h
        apps/oma-lwm2m/oma-tlv.c
        apps/oma-lwm2m/oma-tlv.h
        apps/orchestra/Makefile.orchestra
        apps/orchestra/orchestra-conf.h
        apps/orchestra/orchestra-rule-default-common.c
        apps/orchestra/orchestra-rule-eb-per-time-source.c
        apps/orchestra/orchestra-rule-unicast-per-neighbor-rpl-ns.c
        apps/orchestra/orchestra-rule-unicast-per-neighbor-rpl-storing.c
        apps/orchestra/orchestra.c
        apps/orchestra/orchestra.h
        apps/orchestra/README.md
        apps/ping6/Makefile.ping6
        apps/ping6/ping6.c
        apps/ping6/ping6.h
        apps/powertrace/Makefile.powertrace
        apps/powertrace/powertrace.c
        apps/powertrace/powertrace.h
        apps/process-list/Makefile.process-list
        apps/process-list/process-list-dsc.c
        apps/process-list/process-list-dsc.h
        apps/process-list/process-list.c
        apps/program-handler/Makefile.program-handler
        apps/program-handler/program-handler.c
        apps/program-handler/program-handler.h
        apps/rest-engine/Makefile.rest-engine
        apps/rest-engine/rest-constants.h
        apps/rest-engine/rest-engine.c
        apps/rest-engine/rest-engine.h
        apps/serial-shell/Makefile.serial-shell
        apps/serial-shell/serial-shell.c
        apps/serial-shell/serial-shell.h
        apps/servreg-hack/Makefile.servreg-hack
        apps/servreg-hack/servreg-hack.c
        apps/servreg-hack/servreg-hack.h
        apps/shell/gui-shell.c
        apps/shell/Makefile.shell
        apps/shell/shell-base64.c
        apps/shell/shell-base64.h
        apps/shell/shell-blink.c
        apps/shell/shell-blink.h
        apps/shell/shell-coffee.c
        apps/shell/shell-coffee.h
        apps/shell/shell-collect-view.c
        apps/shell/shell-collect-view.h
        apps/shell/shell-crc.c
        apps/shell/shell-crc.h
        apps/shell/shell-download.c
        apps/shell/shell-download.h
        apps/shell/shell-dsc.c
        apps/shell/shell-dsc.h
        apps/shell/shell-exec.c
        apps/shell/shell-exec.h
        apps/shell/shell-file.c
        apps/shell/shell-file.h
        apps/shell/shell-httpd.c
        apps/shell/shell-httpd.h
        apps/shell/shell-irc.c
        apps/shell/shell-irc.h
        apps/shell/shell-memdebug.c
        apps/shell/shell-memdebug.h
        apps/shell/shell-netperf.c
        apps/shell/shell-netperf.h
        apps/shell/shell-netstat.c
        apps/shell/shell-netstat.h
        apps/shell/shell-ping.c
        apps/shell/shell-ping.h
        apps/shell/shell-power.c
        apps/shell/shell-power.h
        apps/shell/shell-powertrace.c
        apps/shell/shell-powertrace.h
        apps/shell/shell-profile.c
        apps/shell/shell-profile.h
        apps/shell/shell-ps.c
        apps/shell/shell-ps.h
        apps/shell/shell-reboot.c
        apps/shell/shell-reboot.h
        apps/shell/shell-rime-debug-runicast.c
        apps/shell/shell-rime-debug-runicast.h
        apps/shell/shell-rime-debug.c
        apps/shell/shell-rime-debug.h
        apps/shell/shell-rime-neighbors.c
        apps/shell/shell-rime-neighbors.h
        apps/shell/shell-rime-netcmd.c
        apps/shell/shell-rime-netcmd.h
        apps/shell/shell-rime-ping.c
        apps/shell/shell-rime-ping.h
        apps/shell/shell-rime-sendcmd.c
        apps/shell/shell-rime-sendcmd.h
        apps/shell/shell-rime-sniff.c
        apps/shell/shell-rime-sniff.h
        apps/shell/shell-rime-unicast.c
        apps/shell/shell-rime-unicast.h
        apps/shell/shell-rime.c
        apps/shell/shell-rime.h
        apps/shell/shell-rsh.c
        apps/shell/shell-rsh.h
        apps/shell/shell-run.c
        apps/shell/shell-run.h
        apps/shell/shell-sendtest.c
        apps/shell/shell-sendtest.h
        apps/shell/shell-sky.c
        apps/shell/shell-sky.h
        apps/shell/shell-tcpsend.c
        apps/shell/shell-tcpsend.h
        apps/shell/shell-text.c
        apps/shell/shell-text.h
        apps/shell/shell-time.c
        apps/shell/shell-time.h
        apps/shell/shell-udpsend.c
        apps/shell/shell-udpsend.h
        apps/shell/shell-vars.c
        apps/shell/shell-vars.h
        apps/shell/shell-wget.c
        apps/shell/shell-wget.h
        apps/shell/shell.c
        apps/shell/shell.h
        apps/slip-cmd/cmd.c
        apps/slip-cmd/cmd.h
        apps/slip-cmd/Makefile.slip-cmd
        apps/slip-cmd/packetutils.c
        apps/slip-cmd/packetutils.h
        apps/telnet/Makefile.telnet
        apps/telnet/simpletelnet.c
        apps/telnet/simpletelnet.h
        apps/telnet/telnet-dsc.c
        apps/telnet/telnet-dsc.h
        apps/telnet/telnet.c
        apps/telnet/telnet.h
        apps/telnetd/Makefile.telnetd
        apps/telnetd/telnetd-dsc.c
        apps/telnetd/telnetd-dsc.h
        apps/telnetd/telnetd-gui.c
        apps/telnetd/telnetd.c
        apps/telnetd/telnetd.h
        apps/unit-test/example-test.c
        apps/unit-test/Makefile.unit-test
        apps/unit-test/unit-test.c
        apps/unit-test/unit-test.h
        apps/webbrowser/html-strings
        apps/webbrowser/html-strings.c
        apps/webbrowser/html-strings.h
        apps/webbrowser/htmlparser.c
        apps/webbrowser/htmlparser.h
        apps/webbrowser/http-strings
        apps/webbrowser/http-strings.c
        apps/webbrowser/http-strings.h
        apps/webbrowser/http-user-agent-string
        apps/webbrowser/http-user-agent-string.c
        apps/webbrowser/http-user-agent-string.h
        apps/webbrowser/Makefile.webbrowser
        apps/webbrowser/webclient.c
        apps/webbrowser/webclient.h
        apps/webbrowser/www-dsc.c
        apps/webbrowser/www-dsc.h
        apps/webbrowser/www.c
        apps/webbrowser/www.h
        apps/webserver/httpd-fs/404.html
        apps/webserver/httpd-fs/files.shtml
        apps/webserver/httpd-fs/footer.html
        apps/webserver/httpd-fs/header.html
        apps/webserver/httpd-fs/index.html
        apps/webserver/httpd-fs/processes.shtml
        apps/webserver/httpd-fs/status.shtml
        apps/webserver/httpd-fs/style.css
        apps/webserver/httpd-fs/tcp.shtml
        apps/webserver/httpd-fs/upload.html
        apps/webserver/http-strings
        apps/webserver/http-strings.c
        apps/webserver/http-strings.h
        apps/webserver/httpd-cfs.c
        apps/webserver/httpd-cfs.h
        apps/webserver/httpd-cgi.c
        apps/webserver/httpd-cgi.h
        apps/webserver/httpd-fs.c
        apps/webserver/httpd-fs.h
        apps/webserver/httpd-fsdata.c
        apps/webserver/httpd-fsdata.h
        apps/webserver/httpd.c
        apps/webserver/httpd.h
        apps/webserver/Makefile.webserver
        apps/webserver/urlconv.c
        apps/webserver/urlconv.h
        apps/webserver/webserver-dsc.c
        apps/webserver/webserver-dsc.h
        apps/webserver/webserver-nogui.c
        apps/webserver/webserver-nogui.h
        apps/webserver/webserver.c
        apps/webserver/webserver.h
        apps/webserver-nano/httpd-fs/makefsdata.ignore/ttt/b.gif
        apps/webserver-nano/httpd-fs/makefsdata.ignore/ttt/bc.gif
        apps/webserver-nano/httpd-fs/makefsdata.ignore/ttt/bh.gif
        apps/webserver-nano/httpd-fs/makefsdata.ignore/ttt/bv.gif
        apps/webserver-nano/httpd-fs/makefsdata.ignore/ttt/index.html
        apps/webserver-nano/httpd-fs/makefsdata.ignore/ttt/index.shtml
        apps/webserver-nano/httpd-fs/makefsdata.ignore/ttt/o.gif
        apps/webserver-nano/httpd-fs/makefsdata.ignore/ttt/oc.gif
        apps/webserver-nano/httpd-fs/makefsdata.ignore/ttt/oh.gif
        apps/webserver-nano/httpd-fs/makefsdata.ignore/ttt/ov.gif
        apps/webserver-nano/httpd-fs/makefsdata.ignore/ttt/s.css
        apps/webserver-nano/httpd-fs/makefsdata.ignore/ttt/ttt.shtml
        apps/webserver-nano/httpd-fs/makefsdata.ignore/ttt/x.gif
        apps/webserver-nano/httpd-fs/makefsdata.ignore/ttt/xc.gif
        apps/webserver-nano/httpd-fs/makefsdata.ignore/ttt/xh.gif
        apps/webserver-nano/httpd-fs/makefsdata.ignore/ttt/xv.gif
        apps/webserver-nano/httpd-fs/makefsdata.ignore/404.html
        apps/webserver-nano/httpd-fs/makefsdata.ignore/ajax.js
        apps/webserver-nano/httpd-fs/makefsdata.ignore/ajax.shtml
        apps/webserver-nano/httpd-fs/makefsdata.ignore/ajaxdata.shtml
        apps/webserver-nano/httpd-fs/makefsdata.ignore/favicon.gif
        apps/webserver-nano/httpd-fs/makefsdata.ignore/files.shtml
        apps/webserver-nano/httpd-fs/makefsdata.ignore/footer.html
        apps/webserver-nano/httpd-fs/makefsdata.ignore/header.html
        apps/webserver-nano/httpd-fs/makefsdata.ignore/index.html
        apps/webserver-nano/httpd-fs/makefsdata.ignore/index.shtml
        apps/webserver-nano/httpd-fs/makefsdata.ignore/processes.shtml
        apps/webserver-nano/httpd-fs/makefsdata.ignore/README.makefsdata.md
        apps/webserver-nano/httpd-fs/makefsdata.ignore/robots.txt
        apps/webserver-nano/httpd-fs/makefsdata.ignore/status.shtml
        apps/webserver-nano/httpd-fs/makefsdata.ignore/tcp.shtml
        apps/webserver-nano/httpd-fs/makefsdata.ignore/upload.html
        apps/webserver-nano/httpd-fs/404.html
        apps/webserver-nano/httpd-fs/files.shtml
        apps/webserver-nano/httpd-fs/index.shtml
        apps/webserver-nano/httpd-fs/status.shtml
        apps/webserver-nano/httpd-fs/tcp.shtml
        apps/webserver-nano/httpd-cfs.c
        apps/webserver-nano/httpd-cfs.h
        apps/webserver-nano/httpd-cgi.c
        apps/webserver-nano/httpd-cgi.h
        apps/webserver-nano/httpd-fs.c
        apps/webserver-nano/httpd-fs.h
        apps/webserver-nano/httpd-fsdata.c
        apps/webserver-nano/httpd-fsdata.h
        apps/webserver-nano/httpd.c
        apps/webserver-nano/httpd.h
        apps/webserver-nano/Makefile.webserver-nano
        apps/webserver-nano/urlconv.c
        apps/webserver-nano/urlconv.h
        apps/webserver-nano/webserver-dsc.c
        apps/webserver-nano/webserver-dsc.h
        apps/webserver-nano/webserver-nogui.c
        apps/webserver-nano/webserver-nogui.h
        apps/webserver-nano/webserver.c
        apps/webserver-nano/webserver.h
        core/cfs/cfs-coffee.c
        core/cfs/cfs-coffee.h
        core/cfs/cfs-eeprom.c
        core/cfs/cfs-posix-dir.c
        core/cfs/cfs-posix.c
        core/cfs/cfs-ram.c
        core/cfs/cfs-xmem.c
        core/cfs/cfs.h
        core/ctk/libconio/libconio.c
        core/ctk/libconio/libconio.h
        core/ctk/ctk-conio.c
        core/ctk/ctk-conio.h
        core/ctk/ctk-draw.h
        core/ctk/ctk-filedialog.c
        core/ctk/ctk-filedialog.h
        core/ctk/ctk-mouse.h
        core/ctk/ctk-textentry-checkbox.c
        core/ctk/ctk-textentry-checkbox.h
        core/ctk/ctk-textentry-cmdline.c
        core/ctk/ctk-textentry-cmdline.h
        core/ctk/ctk-textentry-multiline.c
        core/ctk/ctk-textentry-multiline.h
        core/ctk/ctk.c
        core/ctk/ctk.h
        core/dev/battery-sensor.h
        core/dev/button-sensor.h
        core/dev/eeprom.h
        core/dev/leds.c
        core/dev/leds.h
        core/dev/nullradio.c
        core/dev/nullradio.h
        core/dev/radio-sensor.h
        core/dev/radio.h
        core/dev/rom.h
        core/dev/serial-line.c
        core/dev/serial-line.h
        core/dev/slip.c
        core/dev/slip.h
        core/dev/spi.h
        core/dev/watchdog.h
        core/dev/xmem.h
        core/lib/strncasecmp/strncasecmp.c
        core/lib/aes-128.c
        core/lib/aes-128.h
        core/lib/assert.c
        core/lib/assert.h
        core/lib/ccm-star.c
        core/lib/ccm-star.h
        core/lib/crc16.c
        core/lib/crc16.h
        core/lib/gcr.c
        core/lib/gcr.h
        core/lib/ifft.c
        core/lib/ifft.h
        core/lib/list.c
        core/lib/list.h
        core/lib/me.c
        core/lib/me.h
        core/lib/me_tabs.c
        core/lib/me_tabs.h
        core/lib/memb.c
        core/lib/memb.h
        core/lib/mmem.c
        core/lib/mmem.h
        core/lib/petsciiconv.c
        core/lib/petsciiconv.h
        core/lib/print-stats.c
        core/lib/print-stats.h
        core/lib/random.c
        core/lib/random.h
        core/lib/ringbuf.c
        core/lib/ringbuf.h
        core/lib/ringbufindex.c
        core/lib/ringbufindex.h
        core/lib/sensors.c
        core/lib/sensors.h
        core/lib/settings.c
        core/lib/settings.h
        core/lib/trickle-timer.c
        core/lib/trickle-timer.h
        core/loader/cle.c
        core/loader/cle.h
        core/loader/cle_avr.c
        core/loader/cle_msp430.c
        core/loader/cmod.c
        core/loader/cmod.h
        core/loader/dlloader.c
        core/loader/dlloader.h
        core/loader/elf32.h
        core/loader/elfloader-arch.h
        core/loader/elfloader-avr.c
        core/loader/elfloader-msp430.c
        core/loader/elfloader-msp430x.c
        core/loader/elfloader-stub.c
        core/loader/elfloader-x86.c
        core/loader/elfloader.c
        core/loader/elfloader.h
        core/loader/elfloader_compat.c
        core/loader/elfloader_compat.h
        core/loader/sym.c
        core/loader/sym.h
        core/loader/symbols-def.h
        core/loader/symbols.h
        core/loader/symtab-avr.c
        core/loader/symtab.c
        core/loader/symtab.h
        core/net/http-socket/http-socket.c
        core/net/http-socket/http-socket.h
        core/net/ip/dhcpc.c
        core/net/ip/dhcpc.h
        core/net/ip/ip64-addr.c
        core/net/ip/ip64-addr.h
        core/net/ip/psock.c
        core/net/ip/psock.h
        core/net/ip/resolv.c
        core/net/ip/resolv.h
        core/net/ip/simple-udp.c
        core/net/ip/simple-udp.h
        core/net/ip/slipdev.c
        core/net/ip/slipdev.h
        core/net/ip/tcp-socket.c
        core/net/ip/tcp-socket.h
        core/net/ip/tcpip.c
        core/net/ip/tcpip.h
        core/net/ip/udp-socket.c
        core/net/ip/udp-socket.h
        core/net/ip/uip-debug.c
        core/net/ip/uip-debug.h
        core/net/ip/uip-nameserver.c
        core/net/ip/uip-nameserver.h
        core/net/ip/uip-packetqueue.c
        core/net/ip/uip-packetqueue.h
        core/net/ip/uip-split.c
        core/net/ip/uip-split.h
        core/net/ip/uip-udp-packet.c
        core/net/ip/uip-udp-packet.h
        core/net/ip/uip.h
        core/net/ip/uip_arch.h
        core/net/ip/uiplib.c
        core/net/ip/uiplib.h
        core/net/ip/uipopt.h
        core/net/ip64/ip64-addrmap.c
        core/net/ip64/ip64-addrmap.h
        core/net/ip64/ip64-arp.c
        core/net/ip64/ip64-arp.h
        core/net/ip64/ip64-conf-example.h
        core/net/ip64/ip64-dhcpc.c
        core/net/ip64/ip64-dhcpc.h
        core/net/ip64/ip64-dns64.c
        core/net/ip64/ip64-dns64.h
        core/net/ip64/ip64-driver.h
        core/net/ip64/ip64-eth-interface.c
        core/net/ip64/ip64-eth-interface.h
        core/net/ip64/ip64-eth.c
        core/net/ip64/ip64-eth.h
        core/net/ip64/ip64-interface.h
        core/net/ip64/ip64-ipv4-dhcp.c
        core/net/ip64/ip64-ipv4-dhcp.h
        core/net/ip64/ip64-null-driver.c
        core/net/ip64/ip64-null-driver.h
        core/net/ip64/ip64-slip-interface.c
        core/net/ip64/ip64-slip-interface.h
        core/net/ip64/ip64-special-ports.c
        core/net/ip64/ip64-special-ports.h
        core/net/ip64/ip64.c
        core/net/ip64/ip64.h
        core/net/ipv4/uaodv-def.h
        core/net/ipv4/uaodv-rt.c
        core/net/ipv4/uaodv-rt.h
        core/net/ipv4/uaodv.c
        core/net/ipv4/uaodv.h
        core/net/ipv4/uip-fw-drv.c
        core/net/ipv4/uip-fw-drv.h
        core/net/ipv4/uip-fw.c
        core/net/ipv4/uip-fw.h
        core/net/ipv4/uip-neighbor.c
        core/net/ipv4/uip-neighbor.h
        core/net/ipv4/uip-over-mesh.c
        core/net/ipv4/uip-over-mesh.h
        core/net/ipv4/uip.c
        core/net/ipv4/uip_arp.c
        core/net/ipv4/uip_arp.h
        core/net/ipv6/multicast/esmrf.c
        core/net/ipv6/multicast/esmrf.h
        core/net/ipv6/multicast/roll-tm.c
        core/net/ipv6/multicast/roll-tm.h
        core/net/ipv6/multicast/smrf.c
        core/net/ipv6/multicast/smrf.h
        core/net/ipv6/multicast/uip-mcast6-engines.h
        core/net/ipv6/multicast/uip-mcast6-route.c
        core/net/ipv6/multicast/uip-mcast6-route.h
        core/net/ipv6/multicast/uip-mcast6-stats.c
        core/net/ipv6/multicast/uip-mcast6-stats.h
        core/net/ipv6/multicast/uip-mcast6.h
        core/net/ipv6/sicslowpan.c
        core/net/ipv6/sicslowpan.h
        core/net/ipv6/uip-ds6-nbr.c
        core/net/ipv6/uip-ds6-nbr.h
        core/net/ipv6/uip-ds6-route.c
        core/net/ipv6/uip-ds6-route.h
        core/net/ipv6/uip-ds6.c
        core/net/ipv6/uip-ds6.h
        core/net/ipv6/uip-icmp6.c
        core/net/ipv6/uip-icmp6.h
        core/net/ipv6/uip-nd6.c
        core/net/ipv6/uip-nd6.h
        core/net/ipv6/uip6.c
        core/net/ipv6/websocket-http-client.c
        core/net/ipv6/websocket-http-client.h
        core/net/ipv6/websocket.c
        core/net/ipv6/websocket.h
        core/net/llsec/noncoresec/noncoresec.c
        core/net/llsec/noncoresec/noncoresec.h
        core/net/llsec/anti-replay.c
        core/net/llsec/anti-replay.h
        core/net/llsec/ccm-star-packetbuf.c
        core/net/llsec/ccm-star-packetbuf.h
        core/net/llsec/llsec.h
        core/net/llsec/llsec802154.h
        core/net/llsec/nullsec.c
        core/net/llsec/nullsec.h
        core/net/mac/contikimac/contikimac-framer.c
        core/net/mac/contikimac/contikimac-framer.h
        core/net/mac/contikimac/contikimac.c
        core/net/mac/contikimac/contikimac.h
        core/net/mac/cxmac/cxmac.c
        core/net/mac/cxmac/cxmac.h
        core/net/mac/sicslowmac/sicslowmac.c
        core/net/mac/sicslowmac/sicslowmac.h
        core/net/mac/tsch/tsch-adaptive-timesync.c
        core/net/mac/tsch/tsch-adaptive-timesync.h
        core/net/mac/tsch/tsch-asn.h
        core/net/mac/tsch/tsch-conf.h
        core/net/mac/tsch/tsch-log.c
        core/net/mac/tsch/tsch-log.h
        core/net/mac/tsch/tsch-packet.c
        core/net/mac/tsch/tsch-packet.h
        core/net/mac/tsch/tsch-private.h
        core/net/mac/tsch/tsch-queue.c
        core/net/mac/tsch/tsch-queue.h
        core/net/mac/tsch/tsch-rpl.c
        core/net/mac/tsch/tsch-rpl.h
        core/net/mac/tsch/tsch-schedule.c
        core/net/mac/tsch/tsch-schedule.h
        core/net/mac/tsch/tsch-security.c
        core/net/mac/tsch/tsch-security.h
        core/net/mac/tsch/tsch-slot-operation.c
        core/net/mac/tsch/tsch-slot-operation.h
        core/net/mac/tsch/tsch.c
        core/net/mac/tsch/tsch.h
        core/net/mac/csma.c
        core/net/mac/csma.h
        core/net/mac/frame802154.c
        core/net/mac/frame802154.h
        core/net/mac/frame802154e-ie.c
        core/net/mac/frame802154e-ie.h
        core/net/mac/framer-802154.c
        core/net/mac/framer-802154.h
        core/net/mac/framer-nullmac.c
        core/net/mac/framer-nullmac.h
        core/net/mac/framer.h
        core/net/mac/mac-sequence.c
        core/net/mac/mac-sequence.h
        core/net/mac/mac.c
        core/net/mac/mac.h
        core/net/mac/nordc.c
        core/net/mac/nullmac.c
        core/net/mac/nullmac.h
        core/net/mac/nullrdc-noframer.c
        core/net/mac/nullrdc-noframer.h
        core/net/mac/nullrdc.c
        core/net/mac/nullrdc.h
        core/net/mac/phase.c
        core/net/mac/phase.h
        core/net/mac/rdc.h
        core/net/rime/abc.c
        core/net/rime/abc.h
        core/net/rime/announcement.c
        core/net/rime/announcement.h
        core/net/rime/broadcast-announcement.c
        core/net/rime/broadcast-announcement.h
        core/net/rime/broadcast.c
        core/net/rime/broadcast.h
        core/net/rime/chameleon-bitopt.c
        core/net/rime/chameleon-bitopt.h
        core/net/rime/chameleon-raw.c
        core/net/rime/chameleon-raw.h
        core/net/rime/chameleon.c
        core/net/rime/chameleon.h
        core/net/rime/channel.c
        core/net/rime/channel.h
        core/net/rime/collect-link-estimate.c
        core/net/rime/collect-link-estimate.h
        core/net/rime/collect-neighbor.c
        core/net/rime/collect-neighbor.h
        core/net/rime/collect.c
        core/net/rime/collect.h
        core/net/rime/ipolite.c
        core/net/rime/ipolite.h
        core/net/rime/mesh.c
        core/net/rime/mesh.h
        core/net/rime/multihop.c
        core/net/rime/multihop.h
        core/net/rime/neighbor-discovery.c
        core/net/rime/neighbor-discovery.h
        core/net/rime/netflood.c
        core/net/rime/netflood.h
        core/net/rime/packetqueue.c
        core/net/rime/packetqueue.h
        core/net/rime/polite-announcement.c
        core/net/rime/polite-announcement.h
        core/net/rime/polite.c
        core/net/rime/polite.h
        core/net/rime/rime.c
        core/net/rime/rime.h
        core/net/rime/rimestats.c
        core/net/rime/rimestats.h
        core/net/rime/rmh.c
        core/net/rime/rmh.h
        core/net/rime/route-discovery.c
        core/net/rime/route-discovery.h
        core/net/rime/route.c
        core/net/rime/route.h
        core/net/rime/rucb.c
        core/net/rime/rucb.h
        core/net/rime/rudolph1.c
        core/net/rime/rudolph1.h
        core/net/rime/rudolph2.c
        core/net/rime/rudolph2.h
        core/net/rime/runicast.c
        core/net/rime/runicast.h
        core/net/rime/stbroadcast.c
        core/net/rime/stbroadcast.h
        core/net/rime/stunicast.c
        core/net/rime/stunicast.h
        core/net/rime/timesynch.c
        core/net/rime/timesynch.h
        core/net/rime/trickle.c
        core/net/rime/trickle.h
        core/net/rime/unicast.c
        core/net/rime/unicast.h
        core/net/rpl/rpl-conf.h
        core/net/rpl/rpl-dag-root.c
        core/net/rpl/rpl-dag-root.h
        core/net/rpl/rpl-dag.c
        core/net/rpl/rpl-ext-header.c
        core/net/rpl/rpl-icmp6.c
        core/net/rpl/rpl-mrhof.c
        core/net/rpl/rpl-nbr-policy.c
        core/net/rpl/rpl-ns.c
        core/net/rpl/rpl-ns.h
        core/net/rpl/rpl-of0.c
        core/net/rpl/rpl-private.h
        core/net/rpl/rpl-timers.c
        core/net/rpl/rpl.c
        core/net/rpl/rpl.h
        core/net/link-stats.c
        core/net/link-stats.h
        core/net/linkaddr.c
        core/net/linkaddr.h
        core/net/nbr-table.c
        core/net/nbr-table.h
        core/net/net-debug.c
        core/net/net-debug.h
        core/net/netstack.c
        core/net/netstack.h
        core/net/packetbuf.c
        core/net/packetbuf.h
        core/net/queuebuf.c
        core/net/queuebuf.h
        core/sys/arg.c
        core/sys/arg.h
        core/sys/autostart.c
        core/sys/autostart.h
        core/sys/cc-gcc.h
        core/sys/cc.h
        core/sys/clock.h
        core/sys/compower.c
        core/sys/compower.h
        core/sys/ctimer.c
        core/sys/ctimer.h
        core/sys/dsc.h
        core/sys/energest.c
        core/sys/energest.h
        core/sys/etimer.c
        core/sys/etimer.h
        core/sys/lc-addrlabels.h
        core/sys/lc-switch.h
        core/sys/lc.h
        core/sys/loader.h
        core/sys/log.h
        core/sys/mt.c
        core/sys/mt.h
        core/sys/node-id.h
        core/sys/process.c
        core/sys/process.h
        core/sys/procinit.c
        core/sys/procinit.h
        core/sys/pt-sem.h
        core/sys/pt.h
        core/sys/rtimer.c
        core/sys/rtimer.h
        core/sys/stimer.c
        core/sys/stimer.h
        core/sys/subprocess.h
        core/sys/timer.c
        core/sys/timer.h
        core/contiki-default-conf.h
        core/contiki-lib.h
        core/contiki-net.h
        core/contiki-version.h
        core/contiki.h
        cpu/msp430/dev/button.h
        cpu/msp430/dev/flash.h
        cpu/msp430/dev/hwconf.h
        cpu/msp430/dev/lpm.h
        cpu/msp430/dev/uart0-putchar.c
        cpu/msp430/dev/uart0.h
        cpu/msp430/dev/uart1-putchar.c
        cpu/msp430/dev/uart1.h
        cpu/msp430/f1xxx/clock.c
        cpu/msp430/f1xxx/msp430.c
        cpu/msp430/f1xxx/rtimer-arch.c
        cpu/msp430/f1xxx/spi.c
        cpu/msp430/f1xxx/uart1.c
        cpu/msp430/f2xxx/msp430.c
        cpu/msp430/f2xxx/spi.c
        cpu/msp430/f2xxx/uart0.c
        cpu/msp430/f2xxx/uart1.c
        cpu/msp430/f5xxx/clock.c
        cpu/msp430/f5xxx/msp430.c
        cpu/msp430/f5xxx/rtimer-arch.c
        cpu/msp430/f5xxx/spi.c
        cpu/msp430/f5xxx/uart0.c
        cpu/msp430/f5xxx/uart1.c
        cpu/msp430/button.c
        cpu/msp430/cc2420-arch-sfd.c
        cpu/msp430/cc2420-arch-sfd.h
        cpu/msp430/cc2420-arch.c
        cpu/msp430/cc2520-arch-sfd.c
        cpu/msp430/cc2520-arch-sfd.h
        cpu/msp430/cc2520-arch.c
        cpu/msp430/flash.c
        cpu/msp430/isr_compat.h
        cpu/msp430/leds-arch.c
        cpu/msp430/loader-arch.c
        cpu/msp430/lpm.c
        cpu/msp430/Makefile.msp430
        cpu/msp430/minileds.c
        cpu/msp430/msp430def.h
        cpu/msp430/mtarch.c
        cpu/msp430/mtarch.h
        cpu/msp430/rom.c
        cpu/msp430/rtimer-arch.h
        cpu/msp430/slip_uart0.c
        cpu/msp430/slip_uart1.c
        cpu/msp430/uip-ipchksum.c
        cpu/msp430/watchdog.c
        dev/cc2420/cc2420.c
        dev/cc2420/cc2420.h
        dev/cc2420/cc2420_const.h
        doc/code-style.c
        doc/example-list.c
        doc/example-pollhandler.c
        doc/example-program.c
        doc/example-psock-client.c
        doc/example-psock-server.c
        lib/fs/fat/option/unicode/cc932.c
        lib/fs/fat/option/unicode/cc936.c
        lib/fs/fat/option/unicode/cc949.c
        lib/fs/fat/option/unicode/cc950.c
        lib/fs/fat/option/unicode/ccsbcs.c
        lib/fs/fat/option/syscall.c
        lib/fs/fat/option/unicode.c
        lib/fs/fat/diskio.h
        lib/fs/fat/ff.c
        lib/fs/fat/ff.h
        lib/fs/fat/integer.h
        lib/newlib/syscalls.c
        platform/sky/apps/blink.c
        platform/sky/apps/burn-nodeid.c
        platform/sky/apps/fader.c
        platform/sky/dev/battery-sensor.c
        platform/sky/dev/button-sensor.c
        platform/sky/dev/i2c.c
        platform/sky/dev/i2c.h
        platform/sky/dev/light-sensor.c
        platform/sky/dev/light-sensor.h
        platform/sky/dev/radio-sensor.c
        platform/sky/dev/sht11-arch.h
        platform/sky/dev/sky-sensors.c
        platform/sky/dev/sky-sensors.h
        platform/sky/dev/temperature-sensor.c
        platform/sky/dev/temperature-sensor.h
        platform/sky/dev/xmem.c
        platform/sky/doc/sky.txt
        platform/sky/cfs-coffee-arch.h
        platform/sky/contiki-conf.h
        platform/sky/contiki-sky-main.c
        platform/sky/contiki-sky-platform.c
        platform/sky/Makefile.common
        platform/sky/Makefile.sky
        platform/sky/node-id.c
        platform/sky/platform-conf.h
        project/project1/project-conf.h
        project/project1/receiver.c
        project/project1/sender.c
        project/project1/symbols.c
        project/project1/symbols.h
        project/project2/project-conf.h
        project/project2/receiver.c
        project/project2/sender.c
        project/project2/symbols.c
        project/project2/symbols.h
        project/project3/sender.c
        project/project3/receiver.c
        project/project3/project-conf.h
        project/project4/sender.c
        project/project4/receiver.c
        project/project4/project-conf.h
        )
